<resources>
    <string name="app_name">Provechito</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
    <string name="favs">Favoritos</string>
    <string name="search">Búscar</string>
    <string name="shop">Compras</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_paso">Nombre Paso</string>
    <string name="xx_xx">xx/xx</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_vel_aliquet_orci_et_suscipit_libero_quisque_cursus_orci_a_maximus_blandit_proin_et_nisl_et_erat_finibus_pretium_eget_sit_amet_orci_sed_elementum_nibh_justo_sed_pharetra_erat_sollicitudin_vitae_aenean_suscipit_placerat_lectus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel aliquet orci, et suscipit libero. Quisque cursus orci a maximus blandit. Proin et nisl et erat finibus pretium eget sit amet orci. Sed elementum nibh justo, sed pharetra erat sollicitudin vitae. Aenean suscipit placerat lectus.</string>
    <string name="xx_xx_xx">XX:XX:XX</string>
    <string name="siguiente_paso">Siguiente paso</string>
    <string name="decorative">Decorative</string>
    <string name="pausa">Pausa</string>
    <string name="reset">Reset</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="duration">Duration</string>
    <string name="category">Category</string>
    <string name="like">Like</string>
    <string name="recipe_picture">Recipe Picture</string>
    <string name="categoryname">CategoryName</string>
    <string name="iniciar_sesi_n_con_google">Iniciar Sesión con Google</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="te_extra_amos">Te extrañamos</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_button">Delete button</string>
    <string name="provechito_logo">Provechito Logo</string>
    <string name="about">About</string>
    <string name="meet_the_team_behind_provechito">Meet the team behind Provechito!</string>
    <string name="carlos_martinez">Carlos Martinez</string>
    <string name="a01375577_itesm_mx">a01375577@itesm.mx</string>
    <string name="diego_palmer_n_bonada">Diego Palmerín Bonada</string>
    <string name="a01747290_itesm_mx">a01747290@itesm.mx</string>
    <string name="desarrollador_de_backend_y_devops">Desarrollador de Backend y DevOps</string>
    <string name="zoe_caballero_dom_nguez">Zoe Caballero Domínguez</string>
    <string name="a01747247_itesm_mx">a01747247@itesm.mx</string>
    <string name="desarrollador_y_customer_success">Desarrollador y Customer Success</string>
    <string name="desarrollador_y_dise_ador_ui_ux">Desarrollador y Diseñador UI/UX</string>
    <string name="desarrollador_y_project_manager">Desarrollador y Project Manager</string>
    <string name="a01377718_itesm_mx">a01377718@itesm.mx</string>
    <string name="javier_alexandro_vargas_s_nchez">Javier Alexandro Vargas Sánchez</string>
    <string name="desarrollador_y_qa">Desarrollador y QA</string>
    <string name="a01066812_itesm_mx">a01066812@itesm.mx</string>
    <string name="sebasti_n_garc_a_olivares">Sebastián García Olivares</string>
    <string name="aqu_est_todo_lo_que_te_ha_gustado_hasta_ahora">Aquí está todo lo que te ha gustado hasta ahora</string>
    <string name="likes">Likes</string>
    <string name="inicio">Inicio</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="mira_las_recetas_que_tenemos_para_ti">Mira las recetas que tenemos para ti</string>
    <string name="categor_as">Categorías</string>
    <string name="recuerda_tus_comidas_anteriores">Recuerda tus comidas anteriores</string>
    <string name="recetas_pasadas">Recetas pasadas</string>
    <string name="focus_button">Focus Button</string>
    <string name="recientes">Recientes</string>
    <string name="nombre_del_platillo">Nombre del platillo</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparaci_n">Preparación</string>
    <string name="toma_aproximadamente_00_minutos">Toma aproximadamente 00 minutos.</string>
    <string name="comenzar">Comenzar</string>
    <string name="recetas_similares">Recetas similares</string>
    <string name="mira_recetas_parecidas">Mira recetas parecidas</string>
    <string name="ya_est">¡Ya está!</string>
    <string name="qu_te_pareci">¿Qué te pareció?</string>
    <string name="facilidad">Facilidad</string>
    <string name="nombre_receta">Nombre Receta</string>
    <string name="sabor">Sabor</string>
    <string name="sad">sad</string>
    <string name="neutral">neutral</string>
    <string name="happy">happy</string>
    <string name="tiempo">Tiempo</string>
    <string name="enviar">Enviar</string>
    <string name="ajustes">Ajustes</string>
    <string name="cuenta">Cuenta</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="nombre">Nombre</string>
    <string name="temporizador">Temporizador</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nuevas_recetas">Nuevas Recetas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="te_extra_amos_toda_la_vida">Te extrañamos toda la vida</string>
    <string name="registro">Registro</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_con_google">Registro con Google</string>
    <string name="mamana">•</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="textview">TextView</string>
    <string name="onboarding_picture">Onboarding Picture</string>
    <string name="_0_00">0.00%</string>
    <string name="statistics_name">Statistics Name</string>
    <string name="databackground">DataBackground</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="lista_de_compras">Lista de compras</string>
    <string name="revisa_tu_lista_de_compras">Revisa tu lista de compras</string>
    <string name="buscar">buscar...</string>
    <string name="plus_button">Plus button</string>
    <string name="email_example_com">email@example.com</string>
    <string name="email_example_com">email@example.com</string>
    <string name="correo">Correo</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registro_con_google">Registro con Google</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="roberto_mart_nez">Roberto Martínez</string>
    <string name="nombre">Nombre</string>
    <string name="te_extra_amos_toda_la_vida">Te extrañamos toda la vida</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
</resources>