<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shop" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_favs"
        android:icon="@drawable/ic_heart_nav"
        android:title="@string/favs" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
</menu>