<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:text="@string/registro"
            android:textAppearance="@style/H1"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:text="@string/te_extra_amos_toda_la_vida"
            android:textAppearance="@style/BodyText"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="20dp"
            android:text="@string/nombre"
            android:textAppearance="@style/Label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_corner_toggle"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/roberto_mart_nez"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAppearance="@style/BodyText"
            android:textColor="?attr/colorOnPrimary"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/correo"
            android:textAppearance="@style/Label"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_corner_toggle"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAppearance="@style/BodyText"
            android:textColor="?attr/colorOnPrimary"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/contrase_a"
            android:textAppearance="@style/Label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textInputPasssowordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_corner_toggle"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAppearance="@style/BodyText"
            android:textColor="?attr/colorOnPrimary"
            android:autofillHints="" />

        <Button

            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/round_corner_toggle"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/btnSignUpGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@color/red"
            android:text="@string/registro_con_google"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>