<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mid_white"
    tools:context=".controllers.fragments.SettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/ajustes"
                    android:textAppearance="@style/Theme.Provechito"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:text="@string/cuenta"
                android:textAppearance="@style/Theme.Provechito"
                android:textSize="24sp" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPersonName"
                android:text="@string/correo" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPersonName"
                android:text="@string/nombre" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/poppins_light"
                android:text="@string/cambiar_contrase_a"
                android:textColor="@color/mid_white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/notificaciones"
                android:textAppearance="@style/Theme.Provechito"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/temporizador"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/poppins"
                    android:text="@string/nuevas_recetas"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/poppins_light"
                android:text="@string/cerrar_sesi_n"
                android:textColor="@color/mid_white" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>